# next.js-typescript-gqless_rust-actix-diesel-juniper

./: .gitignore  Arquitecture.drawio  README.md  ecosystem.yaml  lerna.json  nodemon.json  package.json
api/: Cargo.toml  Rocket.toml  package.json
api/migrations/2020-05-05-214013_initial/: down.sql  up.sql
api/src/: main.rs  models.rs  old_main.rs  schema.rs
api/src/auth/: login.rs  logout.rs  mod.rs
api/src/graphql/: handler.rs  mod.rs  mutation.rs  query.rs  schema.rs
api/src/type_defs/: mod.rs  posts.rs  users.rs
client/: next.config.js  package.json  tsconfig.json
client/pages/: index.tsx
client/pages/api/: [...any].ts
client/src/graphql/: client.ts
client/src/utils/: constants.ts
