[package]
name = "rust_api"
version = "0.1.0"
authors = ["PabloSzx <pablosaez1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { git="https://github.com/diesel-rs/diesel", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
serde = { version = "1.0.2", features = ["derive"]  }
serde_json = { version = "1.0.2" }
serde_derive = { version = "1.0.2" }
actix-identity = "0.2"
actix-rt = "1.0"
anyhow = "1.0"
actix-web = {version = "2.0", features = []}
juniper = { git="https://github.com/graphql-rust/juniper", branch="async-await", features=["async"] }
r2d2 = "0.8.8"
tokio = { version = "0.2", features = ["time"] }
futures = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.2.0"

[dev-dependencies]
log = "0.4.3"

 